Update overleaf to texstudio with last feedback

--- a/Thesis/LaTeX/FutureResearch.tex
+++ b/Thesis/LaTeX/FutureResearch.tex
@@ -4,7 +4,7 @@
 \label{ch:futureResearch}
 
 \section{Limitations of this work}
-During the execution of the research, certain limits were set that make the results less optimal. In total, four telecom companies were interviewed, which is enough to get a general picture of the Belgian and Dutch telecom market, but ideally all major players within the telecom market should be interviewed to get a complete overview of the sector. The survey that was carried out for the comparative and importance study contains 60 valid respondents, as there was a trade-off between the specificity of the chatbot and the number of respondents; it was difficult to find many respondents that met the requirements for participation in the study. A respondent was only valid if (s)he had already interacted with a chatbot of the corresponding telecom companies. Due to the limited number of respondents, the comparative study could not be conducted for each telecom company. The respondents belonged mainly to the younger age category, namely between 20-30 years. The bias is due to the network in which the survey was shared, to avoid this bias, the survey was shared on different media targeting a wider audience.
+During the execution of the research, certain limits were set that make the results less optimal. In total, four telecom companies were interviewed, which is enough to get a general picture of the Belgian and Dutch telecom market, but ideally all major players within the telecom market should be interviewed to get a complete overview of the sector. The survey that was carried out for the comparative and importance study contains 60 valid respondents, as there was a trade-off between the specificity of the chatbot and the number of respondents; it was difficult to find many respondents that met the requirements for participation in the study. A respondent was only valid if they had already interacted with a chatbot of the corresponding telecom companies. Due to the limited number of respondents, the comparative study could not be conducted for each telecom company. The respondents belonged mainly to the younger age category, namely between 20-30 years. The bias is due to the network in which the survey was shared, to avoid this bias, the survey was shared on different media targeting a wider audience.
 
 \section{Possibilities of future research}
 In the literature study, several quality attributes were discussed, but not all of them were included in the study. In future research, these can be integrated so that a broader picture can be created. There can also be a further specific focus on the influence of the quality of the chatbot on a possible customer churn. The current research can also be carried out on a larger scale, telecom companies from other countries can be taken into account. The methodology can be further applied to other sectors, for example the banking sector.
