--- a/Thesis/LaTeX/Introduction.tex
+++ b/Thesis/LaTeX/Introduction.tex
@@ -4,7 +4,7 @@
 \chapter{Introduction}
 \label{ch:introduction}
 For companies, customer service is an important aspect. If it is offered in a good way, they can improve the customer experience and retain their trust.
-The advent of \acrshort{ai}, in combination with other technologies, such as \acrshort{nlp} and \acrshort{ml}, allows companies to scale their relevant and personal customer interactions without losing the necessary qualities \citep*{Quintino2019, Wilson2017}. Companies that capitalise on these technological advances can derive competitive advantages from them, as they can make their business processes more efficient and be more productive.\\
+The advent of \acrshort{ai}, in combination with other technologies, such as \acrfull{nlp} and \acrfull{ml}, allows companies to scale their relevant and personal customer interactions without losing the necessary qualities \citep*{Quintino2019, Wilson2017}. Companies that capitalise on these technological advances can derive competitive advantages from them, as they can make their business processes more efficient and be more productive.\\
 \break
 Chatbots have entered the customer service scene of several industries a few years ago. These bots offer the possibility to interact with customers in an automated way. An industry in which customer relations are important is the telecom sector. Different providers offer the same kind of products within the same range of tariffs, so the quality of customer service plays an important role in customer churn. The impact of these chatbots on the customer experience and the internal policy of the telecom providers is minimally researched. In order to gain more insight into this impact, this research will focus on the following: on the one hand, it will examine what influence chatbots have on providers' current policies, the future vision of chatbots will also be mapped out. On the other hand, this research will take a closer look at customer expectations from the different aspects within a chatbot. The findings from this research can be used by telecom providers to improve their chatbot and to close the gap between their current chatbot and the customer expectations.\\
 \break
