--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -4,7 +4,7 @@
 \chapter{Methodology}
 \label{ch:methodology}
 \section{Research Questions \& Hypotheses}
-To determine the influence of chatbots on the telecom industry, various questions must be asked of the industry's participants. These inquiries are predicated on a hypothesis from which we begin our investigation.\\
+To determine the influence of chatbots on the telecom industry, various questions must be asked of the industry's participants.\\
 \break
 \textbf{Main Question: What is the influence of customer service chatbots for both the customer experience and the business value?}\\
 \break 
@@ -20,21 +20,20 @@ In a task-oriented chatbot, under which a chatbot can be placed, usefulness is k
 Related hypotheses:
 \begin{enumerate}
 	\setlength\itemsep{-0.1em}
-	\item H1: Current chatbots execute requested tasks correctly. Based on \citep{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality” (\acrshort{qa} 1).
-	\item H2: Current chatbots can deliver the same services as a human agent. Based on \citep{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality” (reference: \citep{Eeuwen2017}) (\acrshort{qa} 2).
-	\item H3: Current chatbots contain enough knowledge to provide good assistance. Based on \citep{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” (reference: \citep*{Cohen2016, Kuligowska2015}) (\acrshort{qa} 3).
+	\item H1: Current chatbots execute requested tasks correctly. Based on \citeauthor{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality” (\acrshort{qa} 1).
+	\item H2: Current chatbots can deliver the same services as a human agent. Based on \citeauthor{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality” (\acrshort{qa} 2).
+	\item H3: Current chatbots contain enough knowledge to provide good assistance. Based on \citeauthor{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” (\acrshort{qa} 3).
 \end{enumerate}
 
 \subsubsection{RQ2: Are current chatbots easy to use and accessible?}
 When a chatbot is effective in helping people, but is so complex or unusable that nobody uses it again, it is rational to assume that this chatbot has not made a good impression. In addition, a chatbot should be easily accessible, so that a high level of service is always present.\\
-The quality attributes of \citep{Verkeyn2018} serve as the basis for evaluation. Relevant quality attributes that are linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
 \break
 \break
 Related hypotheses:
 \begin{enumerate}
 	\setlength\itemsep{-0.1em}
-	\item H4: Current  chatbots are easy to use. Based on \citep{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” (reference:\citep*{Candela2018, Duijst2017}) (\acrshort{qa} 4).
-	\item H5: Current  chatbots are available at all times (24/7). Based on \citep{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” (reference: \citep{Wang2019}) (\acrshort{qa} 5).
+	\item H4: Current  chatbots are easy to use. Based on \citeauthor{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” (\acrshort{qa} 4).
+	\item H5: Current  chatbots are available at all times (24/7). Based on \citeauthor{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” (\acrshort{qa} 5).
 \end{enumerate}
 
 \subsubsection{RQ3: Do current chatbots create a pleasant customer experience?}
@@ -46,7 +45,7 @@ A “pleasant” customer experience can be seen as an experience where the cust
 Related hypotheses:
 \begin{enumerate}
 	\setlength\itemsep{-0.1em}
-	\item H6: Current chatbots create an enjoyable interaction Based on \citep{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” (reference: \citep{Morrissey2013}) (\acrshort{qa} 6).
+	\item H6: Current chatbots create an enjoyable interaction. Based on \citeauthor{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” \citep{Morrissey2013} (\acrshort{qa} 6).
 \end{enumerate}
 
 \section{Methodology - Business Interviews}
@@ -59,7 +58,7 @@ The chatbot's general specifications were questioned in the first phase, this ca
 This section focuses on the benefits that the firm receives from using the chatbot. For example, the chatbot is asked what services it can provide. This pertains to renewing or forming a new membership, purchasing products/services, obtaining specific invoice details, and so on. The question also asks to what extent the chatbot can reduce customer support workload, and then goes into further depth about how many questions or tasks a chatbot cannot perform on its own. Furthermore, the focus is on how eager clients of the providers are to use a chatbot. Finally, the negative aspects of the story are discussed.
 
 \subsection{The business value (revenue, reduced costs) realised by the chatbot}
-The third part is about the business value that is created. First, it looks at how much extra direct turnover is created by the chatbot. Then it looks at how this value is generated, it asks about the availability of the chatbot, and how it handles conversations when no human agents are present. Next, it looks at what the initial strategic goal of the chatbot was, was it just added to improve customer service, or was it more of a marketing stunt?  It also asks how much the chatbot costs and which cost items were the most expensive. Finally, it looks at how many fewer people are employed in customer service because of the chatbot.
+The third part is about the business value that is created. First, it looks at how much extra direct turnover is created by the chatbot. Then it looks at how this value is generated, it asks about the availability of the chatbot, and how it handles conversations when no human agents are present. Next, it looks at what the initial strategic goal of the chatbot was, was it just added to improve customer service, or was it more of a marketing stunt?  It also asks how much the chatbot costs and which cost items were the most important. Finally, it looks at how many fewer people are employed in customer service because of the chatbot.
 
 \subsection{The company's future vision of the chatbot}
 The fourth and final part focuses on the company's future vision of the chatbot. They look at the extra features they want to add and how they want to improve the chatbot in terms of technology. Finally, they are asked how they determine what scenarios/dialogs they want to put in the bot and how they will apply this in the future.
@@ -67,7 +66,7 @@ The fourth and final part focuses on the company's future vision of the chatbot.
 \section{Methodology - Survey}
 The research questions and hypotheses will be investigated by means of a joint survey.\\
 \break
-These two strategies will be used to generate the most amount of business value possible. For the business, the value is created by comparing the competition and gathering insight into what the customers consider important. For the customer, the value is found in better chatbots as a result of the study.\\
+The joint survey in combination with the interviews will be used to generate the most amount of business value possible. For the business, the value is created by comparing the competition and gathering insight into what the customers consider important. For the customer, the value is found in better chatbots as a result of the study.\\
 
 \subsection{Are these attributes present for the specific chatbot?}
 To find out if the selected attributes are present, several questions will be used to check with the clients using the chatbots. The used questions per hypothesis are listed below.
@@ -91,10 +90,10 @@ To find out if the selected attributes are present, several questions will be us
 For answering the statements, yes/no questions will be used to check the presence of these attributes.
 
 \subsubsection{Data Evaluation Method - Comparative Study}
-All providers’ chatbots will be compared to one another to see which attributes are present in which chatbot.
+The chatbots will be compared to one another to see which attributes are present in which chatbot.
 
 \subsection{How important are these attributes for the clients?}
-The research questions and hypotheses will be investigated/evaluated by means of the proven KANO method. The method of application is inspired by the study of \citep{Verkeyn2018}.\\
+The research questions and hypotheses will be investigated/evaluated by means of the proven KANO method. The method of application is inspired by the study of \citeauthor{Verkeyn2018}.\\
 \break
 To find out which of the chosen 6 attributes types are seen as important, the following questions per category will be used.
 
@@ -154,9 +153,9 @@ The survey is divided up into 3 parts:\\
 \break
 \ul{Part 1 - general information about the participant and information on the interaction with the chatbot}\\
 \break
-In the first part, general information about the participant is requested such as the postal code, age, highest obtained degree, and gender are requested, these variables can be added as control variables in the static models to process the results.\\
+In the first part, general information about the participant is requested such as the postal code, age, highest obtained degree, and gender, these variables can be added as control variables in the static models to process the results.\\
 \break
-Next, they are asked from which company they used the chatbot, what task they performed, in what language they addressed the chatbot and on what platform they addressed the chatbot.\\
+Next, they are asked from which company they used the chatbot, what task they performed, in what language they addressed the chatbot and on what platform.\\
 \break
 \ul{Part 2 - questions about the interaction with the chatbot}\\
 \break
@@ -170,7 +169,7 @@ The final part of the survey asks what the customer expects from customer servic
 	\item You are not happy with your subscription because it does not match your needs, from a friend you have heard there is a better deal so you want the chatbot to stop your subscription.
 	\item At least once each month, you lose internet connectivity. You are tired of these problems and you want to file a complaint. You turn to the chatbot of your telecom provider with your complaint.
 \end{enumerate}
-After a participant is introduced to each scenario, they were asked each time to give his/her opinion on the statements drawn up in \textbf{3.3.2 of the Methodology}.
+After a participant is introduced to each scenario, they were asked each time to give their opinion on the statements drawn up in \textbf{3.3.2 of the Methodology}.
 
 \subsection{Target group}
-The target group of our survey will not be filtered on human characteristics, but it will be screened on whether the person has already had an experience with a telecom chatbot of a provider located in Belgium or in the Netherlands.
+The target group of the survey will not be filtered on human characteristics, but it will be screened on whether the person has already had an experience with a telecom chatbot of a provider located in Belgium or in the Netherlands.
