--- a/Thesis/LaTeX/Thankword.tex
+++ b/Thesis/LaTeX/Thankword.tex
@@ -1,12 +1,3 @@
 \chapter*{Thankword\hfill} \addcontentsline{toc}{chapter}{Thankword}
 \label{ch:thankword}
-First and foremost, we would like to thank our supervisor Vedavyas Etikala for guiding us through the entire process of this thesis. During difficult moments and hopeless situations he knew how to put us on the right track so that we could finish the thesis successfully. Besides our supervisor, we would also like to thank Prof. Dr. Vanthienen for his feedback and insights on the research. We would also like to thank Chatlayer for making their resources available to us so that we could experiment with chatbots in order to carry out the survey in a creative way, which was subsequently not elaborated on due to negative feedback. Furthermore, we would like to thank Sandrine d'Oreye, Nike Van Heeswijk, Laura Overwijk, Wisse Smet, Chiara Portolani and Justin Wesseling for taking part in the business interviews, through their enthusiasm and knowledge we were able to make interesting insights that have undoubtedly made a positive contribution to this research. We would also like to thank all 60 respondents for taking the time to fill in our survey carefully and qualitatively, without them there would be no research. A special thanks to Ella Raets for proof reading the thesis. To conclude, we would like to thank our parents, friends and fellow students who gave us moral support and motivation, and who made sure that studying was interspersed with entertainment.
-
-
-
-
-
-
-
-
-
+First and foremost, we would like to thank our supervisor Vedavyas Etikala for guiding us through the entire process of this thesis. During difficult moments and hopeless situations he knew how to put us back on the right track so that we could finish the thesis successfully. Besides our supervisor, we would also like to thank Prof. Dr. Vanthienen for his feedback and insights on the research. We would also like to thank Chatlayer for making their resources available so that we could experiment with chatbots. Furthermore, we would like to thank Sandrine d'Oreye, Nike Van Heeswijk, Laura Overwijk, Wisse Smet, Chiara Portolani and Justin Wesseling for taking part in the business interviews. Through their enthusiasm and knowledge we were able to make interesting insights that have undoubtedly made a positive contribution to this research. We would also like to thank all 60 respondents for taking the time to fill in our survey carefully and qualitatively, without them there would be no research. A special thanks to Ella Raets for proof reading the thesis. To conclude, we would like to thank our parents, friends and fellow students who gave us moral support and motivation.
