--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -515,7 +515,7 @@
 	year = {2021},
 }
 @web_page{Lexico2022,
-	author = {Lexico Oxford Library},
+	author = {Oxford Lexico},
 	journal = {Oxford},
 	title = {Meaning of chatbot | Lexico Oxford Library},
 	url = {https://www.lexico.com/definition/chatbot},
@@ -582,7 +582,7 @@
 }
 @report{Acm2021,
 	abstract = {This is the report of the Netherlands Authority for Consumers and Markets (ACM) with the market figures of the telecom sector. Based on data from the most important market participants in the telecom industry, the Telecom Monitor gives an overview of the trends in mobile services, fixed telephony, broadband, television, business network services, and bundles. The largest market participants in the sector regularly provide ACM with information about their activities for the Telecom Monitor. ACM verifies that data. In that way, ACM is able to keep track of the trends and developments in the various markets. The figures form a solid basis for ACM's three-year market analyses.},
-	author = {Netherlands Authority for Consumers \& Market},
+	author = {Netherlands Authority Consumers \& Market},
 	institution = {Authority for Consumers \& Market},
 	month = {7},
 	title = {ACM Telecom Monitor for Q1 2021},
