--- a/Thesis/LaTeX/Research.tex
+++ b/Thesis/LaTeX/Research.tex
@@ -111,7 +111,7 @@ Most chatbots were used on the website of the provider themselves. Only a small 
 	\endminipage\hfill
 	\minipage{0.30\textwidth}
 	\includegraphics[width=\linewidth]{../LaTeX/Figures/Environments/PlatformFreq.png}
-	\caption{A frequency table of all the entries' used platform to interact with the chatbot.}\label{fig:platformFreq}
+	\caption{A frequency table of all the entries' used platforms to interact with the chatbot.}\label{fig:platformFreq}
 	\endminipage\hfill
 \end{figure}
 
@@ -147,11 +147,11 @@ Most chatbots were used on the website of the provider themselves. Only a small 
 			\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Most common \\ user group\end{tabular}} &
 			\multicolumn{1}{l|}{No information} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Younger people \\ and adults\\ (\textless{}= 40 years)\end{tabular}} &
-			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}T-Mobile = younger \\ people\\ Tele2 = adults\end{tabular}} &
+			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}T-Mobile = adults\\ Tele2 = younger\\ people\end{tabular}} &
 			Adults \\ \hline
 			\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Supported\\ questions\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Yes/no, direct \\ \& vague \\ questions\end{tabular}} &
-			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Yes/no, direct \& \\ vague questions\end{tabular}} &
+			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Only predefined\\ scenarios\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Yes/no, direct \& \\ vague questions\end{tabular}} &
 			\begin{tabular}[c]{@{}l@{}}Yes/no, direct \& \\ vague questions\end{tabular} \\ \hline
 		\end{tabular}%
@@ -162,14 +162,14 @@ Most chatbots were used on the website of the provider themselves. Only a small 
 \ul{Supported task categories}\\
 Later on, Proximus wants to develop their chatbot further into a proactive salesman with the aim of offering the best action or promotion. Complaints are forwarded by the bot directly to a live agent.\\
 \break
-Telenet used to have two chatbots, which were AskHugo and AskPlay. AskHugo was a bot that tried to convince customers to buy a Hugo subscription, AskPlay gave recommendations on which movies/series to watch. However, both chatbots were shut down because the \acrshort{roi} was too low.\\
+Telenet used to have two chatbots, AskHugo and AskPlay. AskHugo was a bot that tried to convince customers to buy a Hugo subscription, AskPlay gave recommendations on which movies/series to watch. However, both chatbots were shut down because the \acrshort{roi} was too low. Now they have an FAQ bot that only supports predefined scenarios and is mainly used to gather information for the agents.\\
 \break
-T-Mobile's\footnote{T-Mobile has merged with Tele2 since January 2019. The Tele2 brand has continued to exist and is now a part of T-Mobile. The management of Tele2's chatbot is also done by T-Mobile, these chatbots both use the same underlying system so both chatbots have the same operations.} chatbot can also guide the customer in choosing the right subscription or device. In this way, T-Mobile tries to keep as much "trivial" work away from the physical agents, because the explicit purchase of a specific subscription/device is only done through them. Complaints are partly handled by the bot, it will ask if the customer has already spoken to an employee about this, if this has happened, then the chatbot will give the procedure to file a complaint.\\
+T-Mobile's\footnote{T-Mobile has merged with Tele2 since January 2019. The Tele2 brand has continued to exist and is now a part of T-Mobile. The management of Tele2's chatbot is also done by T-Mobile, these chatbots both use the same underlying system so both chatbots have the same operations.} chatbot can also guide the customer in choosing the right subscription or device. This way, T-Mobile tries to keep as much "trivial" work away from the physical agents, because the explicit purchase of a specific subscription/device is only done through them. Complaints are partly handled by the bot, it will ask if the customer has already spoken to an employee about this, if this has happened, then the chatbot will give the procedure to file a complaint.\\
 \break
 At the chatbot of KPN, in case of complaints, the customer is redirected to a live chat; the bot's only function here is to gather customer information. Selling products and services is not offered in the bot because that is not yet technically possible, the bot only serves as a proactive assistant, if the customer has been in the shop for a while, the bot will ask the customer if he/she needs help.\\
 \break
 \ul{Supported platforms}\\
-Telenet only offers its chatbot through Facebook Messenger, but this is integrated into their website and app. Communication through WhatsApp is also possible, but this only an auto-reply system. In the bot of T-Mobile, there is a difference between the platforms, on the website all services are offered, but in the application the chatbot is mainly focused on questions about mobile services. The bot recognises if the customer asks a question about another service, he will then be redirected. KPN basically only offers their chatbot on their website, but in the app it is also available through a web page built into the application. If the customer then consults the chatbot in the app, this is actually the chatbot on the website.\\
+Telenet only offers its chatbot through Facebook Messenger, but this is integrated into their website and app. Communication through WhatsApp is also possible, but this is only an auto-reply system. In the bot of T-Mobile, there is a difference between the platforms, on the website all services are offered, but in the application the chatbot is mainly focused on questions about mobile services. The bot recognises if the customer asks a question about another service, he will then be redirected. KPN basically only offers their chatbot on their website, but in the app it is also available through a webview. If the customer then consults the chatbot in the app, this is actually the chatbot on the website.\\
 \break
 \ul{Supported languages}\\
 If the Proximus bot is addressed in a different language, the underlying \acrshort{ai} system will recognise that this language is not supported, and the bot will then choose to continue the conversation in English. When the bot of T-Mobile is used in another language, the customer is redirected to an agent. The English variant of KPN's bot has far fewer functions; it will redirect the customer to the right page on the website or continue the conversation with an agent. According to KPN, there is no need in the Netherlands to offer the chatbot in other languages (see Appendix A.4.1). \\
@@ -204,7 +204,7 @@ For every bot except Telenet, the yes/no questions are supported. The treatment 
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}No data because of \\ confidential \\ information\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}65\% of the users\\ are willing to go\\ through the\\ whole flow\end{tabular}} &
 			\multicolumn{1}{l|}{No data available} &
-			\begin{tabular}[c]{@{}l@{}}20\% of the users\\ are willing to\\ directly speak to\\ an agent\end{tabular} \\ \hline
+			\begin{tabular}[c]{@{}l@{}}20\% of the users\\ do not want to\\ use the chatbot \end{tabular} \\ \hline
 			\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Negative\\ influences\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Frustration\\ because of bad \\ experience and\\ prejudice\end{tabular}} &
 			\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Frustration\\ because of the\\ change to a new\\ platform\end{tabular}} &
@@ -227,20 +227,20 @@ The willingness to use the chatbot is examined by each company on the basis of f
 \break
 At Proximus the satisfaction lies in both camps, there are customers who are very satisfied with the chatbot, but there are also customers who think it is very bad.\\ 
 \break
-In the bot of Telenet, the reason why the remaining 30-35\% drop out is explained by a bad previous experience with a similar chatbot.\\ 
+In the bot of Telenet, the reason why the remaining 35\% drop out is explained by a bad previous experience with a similar chatbot.\\ 
 \break
 T-Mobile asks their customers for feedback after a conversation with a chatbot. Analyses showed that the majority of responses ultimately had to call an agent to solve their problem. What T-Mobile also does to gain more insight into their customers is to work with personas. These are linked to possible customer profiles where they map out the corresponding requirements of the customer.\\ 
 \break
 At KPN, the number of direct calls (telephone) to a physical agent would be up higher, to an order of about 10, than with the chatbot. This means that there are 10 times more calls than chats.\\
 \break
 \ul{Negative influences}\\
-Proximus sees mainly negative influences in the form of customers who are frustrated. The frustration arises when the chatbot does not understand the customer properly and goes the wrong way, this demotivates the customer to reuse the bot. Customers who are already frustrated by services that don't work properly should be taken into account, if these customers then come into contact with a chatbot it won't help their mood.\\
+Proximus sees mainly negative influences in the form of customers who are frustrated. The frustration arises when the chatbot does not understand the customer properly and goes the wrong way, this demotivates the customer to reuse the bot. Customers who are already frustrated by services that do not work properly should be taken into account, if these customers then come into contact with a chatbot it will not help their mood.\\
 \break
 Telenet experiences similar scenarios, it was further explained that it can be frustrating for customers to switch to a new platform, namely from 100\% helpdesk to a chatbot. According to Ms Portolani, some customers expect that a chatbot can interpret in the same way as an agent.\\
 \break
 T-Mobile has the same negative aspects as Proximus, they try to solve this by applying a limited form of sentiment analysis. If they measure that a customer is communicating in a frustrated way, they will forward this customer to an agent.\\
 \break
-At KPN, different metrics are used. For instance, the \gls{nps} measures the extent to which customers would recommend the company to acquaintances. The \acrshort{ces} measures how much effort it took to find the answer to the question. The final metric measured is the \acrshort{gcr}, which tells more about how well the customer was helped. The results of these metrics were not shared due to confidential information.\\
+At KPN, different metrics are used. For instance, the \gls{nps} measures the extent to which customers would recommend the company to acquaintances. The \acrfull{ces} measures how much effort it took to find the answer to the question. The final metric measured is the \acrfull{gcr}, which tells more about how well the customer was helped. The results of these metrics were not shared due to confidential information.\\
 \break
 \begin{longtable}[c]{|lllll|}
 	\hline
@@ -255,8 +255,8 @@ At KPN, different metrics are used. For instance, the \gls{nps} measures the ext
 	\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Increased \\ revenue\end{tabular}} &
 	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- No direct \\ revenue because \\ ROI is not\\ yet determined\\ - Chatbot directly\\ ensures they have\\ to spend less on\\ human helpdesk\\ agents\end{tabular}} &
 	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- No picture of\\ how much extra\\ revenue\\ - They have\\ fewer costs to\\ spent on\\ physical agents\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- No concrete\\ figures, because\\ it's not measured\\ - Extra business\\ value is created\\ because fewer \\ costs to spent \\ on physical agents\end{tabular}} &
-	\begin{tabular}[c]{@{}l@{}}- No concrete\\ figures, because \\ it'snot measured\\ - Extra business\\  value is created\\ because fewer \\ costs to spent on \\ physical agents\end{tabular} \\ \hline
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- No concrete\\ figures, because\\ it is not measured\\ - Extra business\\ value is created\\ because fewer \\ costs to spent \\ on physical agents\end{tabular}} &
+	\begin{tabular}[c]{@{}l@{}}- No concrete\\ figures, because \\ it is not measured\\ - Extra business\\  value is created\\ because fewer \\ costs to spent on \\ physical agents\end{tabular} \\ \hline
 	\multicolumn{1}{|l|}{Availability} &
 	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- 24/7 available\\ - Follow-up on \\ social media is \\ always possible\\ - Follow-up on the\\ website and in the\\ app is only \\ possible if user is \\ authenticated\end{tabular}} &
 	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- 24/7 available\\ - Follow-up is\\ always possible\\ because they\\ only use social\\ media\end{tabular}} &
@@ -283,15 +283,15 @@ Every chatbot that was questioned is available 24/7, but there is a difference i
 	\multicolumn{1}{l|}{T-Mobile} &
 	KPN \\ \hline
 	\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Focal points\\ for the \\ future\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Future view was\\ mostly confidential\\ - In general, they\\ are looking to \\ automate their \\ services and be \\ stronger in terms \\ of conversation\\ - Are looking\\ further into voice\\ control (next\\ channel they will\\ capetilise on\\ - Reducing the\\ buttons in their \\ bot, goal is to be \\ as conversational \\ as possible\\ - Are looking into\\ computer vision*\\ - In the long term,\\ they want to\\ integrate the bot\\ with Alexa, \\ Google Home, \\ etc.\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Are currently\\ working on a \\ platform in \\ which the \\ chatbot can\\ take more tasks\\ and answer \\ questions\\ independently\\ - They want to\\ add sentiment\\ analysis\\ - Branding the\\ new chatbot to\\ make it known\\ to their future\\ users\\ - They want to\\ add text\\ prediction to the\\ tool of the \\ human agents*\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- They want to offer\\ the chatbot more\\ proactively on the\\ website\\ - Making the chatbot\\ available in more \\ languages with a \\ translate API (both\\ parties can then use\\ the bot in their own\\ language)\\ - Add asynchronous\\ messaging*\end{tabular}} &
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Future view was\\ mostly confidential\\ - In general, they\\ are looking to \\ automate their \\ services and be \\ stronger in terms \\ of conversation\\ - Are looking\\ further into voice\\ control (next\\ channel they will\\ capitalise on)\\ - Reducing the\\ buttons in their \\ bot, goal is to be \\ as conversational \\ as possible\\ - Are looking into\\ computer vision\\ - In the long term,\\ they want to\\ integrate the bot\\ with Alexa, \\ Google Home, \\ etc.\end{tabular}} &
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Are currently\\ working on a \\ platform in \\ which the \\ chatbot can\\ take more tasks\\ and answer \\ questions\\ independently\\ - They want to\\ add sentiment\\ analysis\\ - Branding the\\ new chatbot to\\ make it known\\ to their future\\ users\\ - They want to\\ add text\\ prediction to the\\ tool of the \\ human agents\end{tabular}} &
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- They want to offer\\ the chatbot more\\ proactively on the\\ website\\ - Making the chatbot\\ available in more \\ languages with a \\ translate API (both\\ parties can then use\\ the bot in their own\\ language)\\ - Add asynchronous\\ messaging\end{tabular}} &
 	\begin{tabular}[c]{@{}l@{}}- Making the bot\\ available in more\\ places (presence\\ on social media\\ as Facebook \\ Messenger and \\ WhatsApp)\\ - Harmonise the\\ entire \\ communication \\ with the customer\\ (if the customer \\ send them via \\ WhatsApp,\\ they want to be \\ aware of this \\ conversation\\ if the customer\\ contacts them via \\ another platform\end{tabular} \\ \hline
 	\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Additional\\ chatbot-\\ features\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Uses AI to classify\\ the question or \\ statement, \\ once this \\ is classified a \\ rules-based \\ approach is used\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Only uses a \\ rules-based \\ approach\end{tabular}} &
-	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Uses AI to classify\\ the question or \\ statement, once this\\ is classified a \\ rules-based approach\\ is used\end{tabular}} &
-	\begin{tabular}[c]{@{}l@{}}Uses AI to classify\\ the question or \\ statement, once this\\ is classified a \\ rules-based \\ approach is used\end{tabular} \\ \hline
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Uses AI to classify\\ the question or \\ statement, \\ once this \\ is classified a \\ rule-based \\ approach is used\end{tabular}} &
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Only uses a \\ rule-based \\ approach\end{tabular}} &
+	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}Uses AI to classify\\ the question or \\ statement, once this\\ is classified a \\ rule-based approach\\ is used\end{tabular}} &
+	\begin{tabular}[c]{@{}l@{}}Uses AI to classify\\ the question or \\ statement, once this\\ is classified a \\ rule-based \\ approach is used\end{tabular} \\ \hline
 	\multicolumn{1}{|l|}{\begin{tabular}[c]{@{}l@{}}Source of\\ knowledge\\ to improve\\ chatbot\end{tabular}} &
 	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}They use \\ benchmarking,\\ marketing studies,\\ check-ins with \\ other companies, \\ research in papers\\ and participation\\ in many \\ conferences \\ to gather extra \\ information on\\ relevant topics\end{tabular}} &
 	\multicolumn{1}{l|}{\begin{tabular}[c]{@{}l@{}}- Are using data\\ analysis\\ - They look at\\ the experience \\ of their agents\end{tabular}} &
@@ -315,34 +315,34 @@ All graphs will be presented as follows: Telenet on the left, Proximus in the mi
 \break
 \ul{Attribute 1: Execute the requested task}\\
 \break
-Looking at how the chatbots performed when solving a task, both Telenet and Proximus seem to have a split customer base where around 50\% is happy and 50\% is not. When looking at the others, there is a clear happiness about how the chatbot performed.\\
+Looking at how the chatbots performed when solving a task, both Telenet and Proximus seem to have a split customer base where around 50\% is happy and 50\% is not. When looking at the others, there is a clear happiness about how the chatbot performed (Figure \ref{fig:Q1}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q1.png}
 	\caption{Responses about the functional question for \acrshort{qa} 1, question 1.}\label{fig:Q1}
 \end{figure}
-Looking at the counter part of the previous question, there is even more discontent with Proximus. The results for Telenet and the others confirm the previous findings.
+Looking at the counter part of the previous question, there is even more discontent with Proximus. The results for Telenet and the others confirm the previous findings (Figure \ref{fig:DQ1}).
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ1.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 1.}\label{fig:DQ1}
 \end{figure}
 \break
-Looking at the results whether the chatbot needed help from an agent to complete it's task, there again is almost a 50-50 split for Telenet and Proximus whereas the others did better again.\\
+Looking at the results whether the chatbot needed help from an agent to complete it's task, there again is almost a 50-50 split for Telenet and Proximus whereas the others did better again (Figure \ref{fig:Q1b}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q1b.png}
 	\caption{Responses about the functional question for \acrshort{qa} 1, question 2.}\label{fig:Q1b}
 \end{figure}
-The dysfunctional version of the previous question confirms these findings.\\
+The dysfunctional version of the previous question confirms these findings (Figure \ref{fig:DQ1b}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ1b.png}s
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 2.}\label{fig:DQ1b}
 \end{figure}
 \break
-A third question to gauge the capabilities of the chatbot to execute the requested task was about the expectations of the chatbot and if it lived up to them. The results show that the chatbot mostly lived up to expectations, even though it could not solve the task it was given.\\
+A third question to gauge the capabilities of the chatbot to execute the requested task was about the expectations of the chatbot and if it lived up to them. The results show that the chatbot mostly lived up to expectations, even though it could not solve the task it was given (Figure \ref{fig:Q1c}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q1c.png}
 	\caption{Responses about the functional question for \acrshort{qa} 1, question 3.}\label{fig:Q1c}
 \end{figure}
-A fourth and final question asked if the user could solve the problem after interacting with the chatbot. For Proximus, there was some pushback but for Telenet and the others, the majority voted yes.\\
+A fourth and final question asked if the user could solve the problem after interacting with the chatbot. For Proximus, there was some pushback but for Telenet and the others, the majority voted yes (Figure \ref{fig:DQ1c}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ1c.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 1, question 4.}\label{fig:DQ1c}
@@ -350,12 +350,12 @@ A fourth and final question asked if the user could solve the problem after inte
 \break
 \ul{Attribute 2: Number of services}\\
 \break
-Attribute 2 looked at the services available and delivered by the chatbot in comparison to a human agent. The responses about whether a chatbot delivers a better service than a human agent were for both Telenet and the others an outstanding no whereas for Proximus, the votes were more divided, almost a 50-50 split.\\
+Attribute 2 looked at the services available and delivered by the chatbot in comparison to a human agent. The responses about whether a chatbot delivers a better service than a human agent were for both Telenet and the others an outstanding no whereas for Proximus, the votes were more divided, almost a 50-50 split (Figure \ref{fig:Q2}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q2.png}
 	\caption{Responses about the functional question for \acrshort{qa} 2.}\label{fig:Q2}
 \end{figure}
-When asked whether the service delivered by a human was of better quality, the responses for each group were almost always yes.\\
+When asked whether the service delivered by a human was of better quality, the responses for each group were almost always yes (Figure \ref{fig:DQ2}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ2.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 2.}\label{fig:DQ2}
@@ -363,36 +363,36 @@ When asked whether the service delivered by a human was of better quality, the r
 \break
 \ul{Attribute 3: Breadth of knowledge}\\
 \break
-When presented with the question "Did the chatbot contain enough knowledge to help with your problem", the responses for each group differ a lot. For Telenet, there is a 50-50 split. Proximus on the other hand is mostly negative. This contrasts the other group where the responses were mainly positive.\\
+When presented with the question "Did the chatbot contain enough knowledge to help with your problem", the responses for each group differ a lot. For Telenet, there is a 50-50 split. Proximus on the other hand is mostly negative. This contrasts the others group where the responses were mainly positive (Figure \ref{fig:Q3}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q3.png}
 	\caption{Responses about the functional question for \acrshort{qa} 3, question 1.}\label{fig:Q3}
 \end{figure}
-When asking the inverse, the answers provided were more streamlined to be mostly negative. In other words, the chatbot knows what he is talking about.\\
+When asking the inverse, the answers provided were more streamlined to be mostly negative. In other words, the chatbot knows what he is talking about (Figure \ref{fig:DQ3}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ3.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 3, question 1.}\label{fig:DQ3}
 \end{figure}
 \break
-The second question checks if the chatbot asked relevant questions to gather extra information about the problem. It measures if the chatbot can gather more information if the given context isn't clear enough. Telenet and the others were mostly positive, Proximus has a 50-50 split.\\
+The second question checks if the chatbot asked relevant questions to gather extra information about the problem. It measures if the chatbot can gather more information if the given context is not clear enough. Telenet and the others were mostly positive, Proximus has a 50-50 split (Figure \ref{fig:Q3b}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q3b.png}
 	\caption{Responses about the functional question for \acrshort{qa} 3, question 2.}\label{fig:Q3b}
 \end{figure}
-When looking at the reverse, Telenet seemed to not ask the right questions whereas Proximus and the others were about evenly split.\\
+When looking at the reverse, Telenet seemed to not ask the right questions whereas Proximus and the others were about evenly split (Figure \ref{fig:DQ3b}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ3.png}
-	\caption{Responses about the dysfunctional question for \acrshort{qa} 3, question 2.}\label{fig:DQ3}
+	\caption{Responses about the dysfunctional question for \acrshort{qa} 3, question 2.}\label{fig:DQ3b}
 \end{figure}
 \break 
 \ul{Attribute 4: Ease of use}\\
 \break
-There weren't any complications when using any of the chatbots.
+There were not any complications when using any of the chatbots (Figure \ref{fig:Q4}).
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q4.png}
 	\caption{Responses about the functional question for \acrshort{qa} 4.}\label{fig:Q4}
 \end{figure}
-Looking at the dysfunctional version of this question, the values confirm what has been seen for Telenet and the others but dispute the result for Proximus. There seem to be some problems when using the Proximus chatbot.\\
+Looking at the dysfunctional version of this question, the values confirm what has been seen for Telenet and the others but dispute the result for Proximus. There seem to be some problems when using the Proximus chatbot (Figure \ref{fig:DQ4}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ4.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 4.}\label{fig:DQ4}
@@ -400,29 +400,30 @@ Looking at the dysfunctional version of this question, the values confirm what h
 \break
 \ul{Attribute 5: Enjoyable interaction}\\
 \break
-The 5\textsuperscript{th} attribute takes into consideration the interaction a user has with the chatbot. The first question asked if the chatbot was polite. The data shows that every group generally has a polite chatbot.\\
+The fifth attribute takes into consideration the interaction a user has with the chatbot. The first question asked if the chatbot was polite. The data shows that every group generally has a polite chatbot (Figure \ref{fig:Q5}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q5.png}
 	\caption{Responses about the functional question for \acrshort{qa} 5, question 1.}\label{fig:Q5}
 \end{figure}
 \break
-When asked if the chatbot interacted in a respectful way, the answers for Telenet were mostly positive, Proximus is once again divided around the 50\% mark and the others scored 100\%.\\
+When asked if the chatbot interacted in a respectful way, the answers for Telenet were mostly positive, Proximus is once again divided around the 50\% mark and the others scored 100\% (Figure \ref{fig:DQ5}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ5.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 5, question 1.}\label{fig:DQ5}
 \end{figure}
 \break
-The second question asks if the user liked interacting with the chatbot. Telenet is evenly split and both Proximus and the others are mostly positive.\\
+The second question asks if the user liked interacting with the chatbot. Telenet is evenly split and both Proximus and the others are mostly positive (Figure \ref{fig:Q5b}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/Q5b.png}
 	\caption{Responses about the functional question for \acrshort{qa} 5, question 2.}\label{fig:Q5b}
 \end{figure}
-When asked the reverse, both Telenet and the others are divided evenly. Proximus has more negative than positive responses meaning, it wasn't a task to interact with their chatbot.\\
+When asked the reverse, both Telenet and the others are divided evenly. Proximus has more negative than positive responses meaning, it wasn't a task to interact with their chatbot (Figure \ref{fig:DQ5b}).\\
 \begin{figure}[!htb]
 	\includegraphics[width=\linewidth, scale=0.5]{../LaTeX/Figures/Comparative/DQ5b.png}
 	\caption{Responses about the dysfunctional question for \acrshort{qa} 5, question 2.}\label{fig:DQ5b}
 \end{figure}
 \FloatBarrier
+
 \subsection{Importance Study - Kano}
 \subsubsection{Discrete analysis}
 To start with the KANO analysis, there first had to be made a clear mapping between the functional and dysfunctional question and which label of KANO would be assigned to the outcome of this mapping (see Figure \ref{fig:kanoOverview}).
@@ -437,7 +438,7 @@ Afterwards, for each scenario (section 3.3.3) as well as the general questions o
 An overview of the label assigned to each entry can be found in Figure \ref{fig:kanoTable}. S1, S2 and S3 refer to the 3 different scenarios.
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=\linewidth]{../LaTeX/Figures/Kano/KanoTable.png}
+	\includegraphics[width=\linewidth, scale=0.7]{../LaTeX/Figures/Kano/KanoTable.png}
 	\caption{Each entry with it's assigned KANO label.}
 	\label{fig:kanoTable}
 \end{figure}
@@ -459,7 +460,7 @@ Now, each entry has a label assigned to it and for every entry, the different ca
 After calculating both these scores for each entry, they were plotted in  a scatter plot, dividing them up into one of the four main categories of KANO. The categorisation can be found in Figure \ref{fig:satisfactionPlot}
 \begin{figure}[!htb]
 	\centering
-	\includegraphics[width=\linewidth]{../LaTeX/Figures/Kano/SatisfactionPlot.png}
+	\includegraphics[width=\linewidth, scale=0.7]{../LaTeX/Figures/Kano/SatisfactionPlot.png}
 	\caption{The satisfaction/dissatisfaction plot.}
 	\label{fig:satisfactionPlot}
 \end{figure}
@@ -499,7 +500,7 @@ The data clearly shows that people do not think chatbots can deliver the same se
 	assistance.}\\
 There seems to be a big split between the customers. Depending on the provider, around 50\% think the chatbot is knowledgeable enough to help with their problem. When the chatbot did not have enough context to solve a question, depending on the situation, around 50\% think the chatbot did not ask the right questions to gather the needed information.\\
 \break
-\textbf{RQ1:} The opinions are divided. In some cases they are effective, in others they are not but they perform up to expectations from the customer.\\
+\textbf{RQ1:} The opinions are divided. In some cases they are effective, in others they are not but they perform up to expectations from the customer.
 \subsubsection{RQ2: Are current chatbots easy to use and accessible?}
 \ul{H4: Current chatbots are easy to use.}\\
 In general, there does not seem to be a problem when using the chatbot.\\
@@ -507,10 +508,10 @@ In general, there does not seem to be a problem when using the chatbot.\\
 \ul{H5: Current chatbots are available at all times (24/7).}\\
 Each provider provides a chatbot that is available 24/7.\\
 \break
-\textbf{RQ2:} Yes, chatbots are easy to use and accessible.\\
+\textbf{RQ2:} Yes, chatbots are easy to use and accessible.
 \subsubsection{RQ3: Do current chatbots create a pleasant customer experience?}
 \ul{H6: Current chatbots create an enjoyable interaction.}\\
-Chatbots are generally perceived to be polite to interact with and most didn't mind interacting with a chatbot.\\
+Chatbots are generally perceived to be polite to interact with and most did not mind interacting with a chatbot.\\
 \break
 \textbf{RQ3:} It is not yet perceived as enjoyable but it is not a task either.
 \subsubsection{Main question}
